// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginFooterItem  with custom node 1`] = `
<div>
  <div>
    My custom node
  </div>
</div>
`;

exports[`className is added to the root element 1`] = `undefined`;

exports[`renders with PatternFly Core styles 1`] = `
<div>
  <a
    href="#"
    target="_self"
  />
</div>
`;
